--- a/ag-odds.html
+++ b/ag-odds.html
@@ -159,7 +159,7 @@
             <p>Real-time odds from prediction markets on events that move grain prices. Tariffs, trade deals, Fed rates, farm policy — translated into plain English for farmers. These aren't our guesses; they're where real money is being placed.</p>
         </div>
 
-        <div class="refresh-note">📡 Data from <span>Polymarket</span> prediction markets · Last checked: <span id="last-refresh">--</span></div>
+        <div class="refresh-note">📡 Data from <span class="tip" data-tip="Decentralized prediction market — $9B+ cumulative volume">Polymarket</span> prediction markets · Last checked: <span id="last-refresh">--</span></div>
 
         <!-- What the Markets Are Saying — hero summary -->
         <div class="markets-saying">
@@ -341,7 +341,7 @@
                 url: 'https://www.agweb.com/news/policy',
                 vol: '--',
                 ends: 'Dec 2026',
-                impact: 'The 2018 Farm Bill has been extended twice. A new bill could update <span class=tip data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> reference prices, expand crop insurance, and address conservation compliance — all directly affecting your bottom line.'
+                impact: 'The 2018 Farm Bill has been extended twice. A new bill could update <span class="tip" data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> reference prices, expand crop insurance, and address conservation compliance — all directly affecting your bottom line.'
             },
             {
                 q: "Will USDA finalize higher RVO biofuel mandates?",
@@ -360,7 +360,7 @@
                 url: 'https://polymarket.com/predictions/politics',
                 vol: '$300K+',
                 ends: 'Dec 2026',
-                impact: 'Shutdowns delay USDA reports (<span class=tip data-tip="World Ag Supply &amp; Demand Estimates">WASDE</span>, Crop Progress), <span class=tip data-tip="Farm Service Agency">FSA</span> office services, and <span class=tip data-tip="Conservation Reserve Program">CRP</span>/<span class=tip data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> payments. Extended shutdown in planting season is the nightmare scenario.'
+                impact: 'Shutdowns delay USDA reports (<span class="tip" data-tip="World Ag Supply &amp; Demand Estimates">WASDE</span>, Crop Progress), <span class="tip" data-tip="Farm Service Agency">FSA</span> office services, and <span class="tip" data-tip="Conservation Reserve Program">CRP</span>/<span class="tip" data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> payments. Extended shutdown in planting season is the nightmare scenario.'
             }
         ],
         commodities: [
