--- a/breakeven.html
+++ b/breakeven.html
@@ -84,7 +84,7 @@
                                 </select>
                             </div>
                             <div>
-                                <label style="font-size: 0.75rem;">Expected Yield (bu/ac)</label>
+                                <label style="font-size: 0.75rem;">Expected Yield (<span class="tip" data-tip="Bushels per acre">bu/ac</span>)</label>
                                 <input type="number" id="yield" value="180" onchange="calcBreakeven()">
                             </div>
                         </div>
