--- a/gdu.html
+++ b/gdu.html
@@ -53,7 +53,7 @@
         <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → GDU Calculator</nav>
         <div class="grid-2">
             <div class="panel">
-                <div class="panel-head"><h1>🌡️ GDU CALCULATOR</h1></div>
+                <div class="panel-head"><h1>🌡️ <span class="tip" data-tip="Growing Degree Units — measures heat accumulation for crop staging">GDU</span> CALCULATOR</h1></div>
                 <div class="panel-body">
                     <div style="margin-bottom:20px">
                         <label>Hybrid Maturity (CRM)</label>
