--- a/index.html
+++ b/index.html
@@ -365,7 +365,18 @@
     <div id="header"></div>
     
     <div class="ticker-wrap">
-        <div class="ticker" id="ticker"></div>
+        <div class="ticker" id="ticker">
+            <span class="ticker-item news">🌾 AGSIST — Free Live Agricultural Dashboard</span>
+            <span class="ticker-item news">🌽 Live Corn, Soybean &amp; Wheat Futures</span>
+            <span class="ticker-item news">📰 Latest Ag News &amp; USDA Reports</span>
+            <span class="ticker-item news">🌤️ Real-Time Weather &amp; Spray Conditions</span>
+            <span class="ticker-item news">🛠️ Free Tools: GDU Calculator, Breakeven, Soil Survey &amp; More</span>
+            <span class="ticker-item news">🌾 AGSIST — Free Live Agricultural Dashboard</span>
+            <span class="ticker-item news">🌽 Live Corn, Soybean &amp; Wheat Futures</span>
+            <span class="ticker-item news">📰 Latest Ag News &amp; USDA Reports</span>
+            <span class="ticker-item news">🌤️ Real-Time Weather &amp; Spray Conditions</span>
+            <span class="ticker-item news">🛠️ Free Tools: GDU Calculator, Breakeven, Soil Survey &amp; More</span>
+        </div>
     </div>
     
     <main id="main-content">
